@@ -816,6 +816,7 @@
 #define IDM_SOUND_EDITOR                32994
 #define IDM_COLLECTION_EDITOR           32995
 #define IDC_EFFECT_COMBO                32996
+#define ID_TABLE_CAMERAMODE             32997
 #define DZVALUE                         65535
 #define DZName                          65535
 
@@ -824,7 +825,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        614
-#define _APS_NEXT_COMMAND_VALUE         32997
+#define _APS_NEXT_COMMAND_VALUE         32998
 #define _APS_NEXT_CONTROL_VALUE         427
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
